# ai-travel-planner

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: db.py  main.py
apps/api/tests/: test_db_check.py  test_health.py
